# autoresearch-trading

./: .gitignore  HANDOFF.md  PLAN.md  README.md  deploy-autoresearch.yaml  deploy.py  prepare.py  prepare_daily_backup.py  prepare_v02_backup.py  program.md  pyproject.toml  train_daily_backup.py  train_v02_backup.py
