[project]
name = "autoresearch-trading"
version = "0.1.0"
description = "Autonomous AI research for day trading model optimization on single GPU"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.5",
    "numpy>=1.24",
    "pandas>=2.0",
    "yfinance>=0.2.40",
    "pyarrow>=14.0",
    "matplotlib>=3.7",
    "scipy>=1.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
