[project]
name = "autoresearch-trading"
version = "0.3.0"
description = "Autonomous AI research for options-native intraday SPY trading model on single GPU"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.5",
    "numpy>=1.24",
    "pandas>=2.0",
    "polygon-api-client>=1.13",
    "pyarrow>=14.0",
    "matplotlib>=3.7",
    "scipy>=1.11",
    "tzdata>=2024.1",
]
